# coolview

./: ConfigPanel.qml  EffectTile.qml  Main.qml  build.gradle.kts  main.py  pyproject.toml  readme.md  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/coolview/: MainActivity.kt
app/src/main/java/com/example/coolview/data/: CacheManager.kt  NetworkClients.kt
app/src/main/java/com/example/coolview/model/: Models.kt
app/src/main/java/com/example/coolview/ui/components/: EffectTile.kt
app/src/main/java/com/example/coolview/ui/screens/: AboutScreen.kt  ConfigScreen.kt  ViewerScreen.kt
app/src/main/java/com/example/coolview/ui/screens/config/: RemoteFolderPicker.kt  SceneComponents.kt  SourceComponents.kt  SourceEditor.kt
app/src/main/java/com/example/coolview/ui/screens/viewer/: ViewerControlPanel.kt  ViewerGridContent.kt  ViewerUtils.kt
app/src/main/java/com/example/coolview/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/example/coolview/viewmodel/: MainViewModel.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  themes.xml
gradle/wrapper/: gradle-wrapper.properties
